<resources>
    <string name="app_name">JoyfulKitchen</string>
    <string name="my_name">我</string>

    <!--首页字符串-->
    <string name="home_title">开始称量</string>
    <string name="home_search_name">输入当前称量的食材</string>
    <string name="home_search_btn">设置</string>
    <string name="home_nofood_tv">你还没有选择食材，无法计算出热量</string>
    <string name="home_groupbutton_g">克</string>
    <string name="home_groupbutton_oz">安士</string>
    <string name="home_groupbutton_ml">毫升</string>
    <string name="home_groupbutton_tael">两</string>
    <string name="home_groupbutton_pound">磅</string>
    <string name="home_food_nutrition">选择食材</string>
    <string name="food_nutrition">营养价值</string>
<<<<<<< HEAD
    <string name="food_unit">每100克含量</string>
=======
    <string name="food_unit">克/100克</string>
>>>>>>> ee8c772c5de05fe9a6131785c51421547d394549
    <string name="food_protein">蛋白质</string>
    <string name="food_fat">脂肪</string>
    <string name="food_carbon">碳水化合物</string>
    <string name="food_heat">热量</string>
    <string name="food_salt">无机盐类</string>
    <string name="food_calcium">钙</string>
    <string name="food_phosphorus">磷</string>
    <string name="food_tron">铁</string>

</resources>
