<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:orientation="horizontal"
        android:background="@color/home_bg"
		android:paddingTop="5dp"
        >

		<!--三杠图标-->
        <ImageView
            android:id="@+id/home_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/home_menu"
			android:layout_marginLeft="8dp"
            />

            <LinearLayout
                android:id="@+id/home_tv_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:typeface="serif"
                    android:textStyle="bold|italic"
                    android:textColor="@color/lightwhite"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="joyful weigh"/>

                <!--<ImageView
                    android:id="@+id/home_search_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/home_search_img"
					android:padding="5dp"
                    />-->
				<CheckBox
					android:id="@+id/checkbox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="true"
					android:button="@drawable/home_speak_checkbox"
					android:padding="5dp"
					/>
            </LinearLayout>

	</LinearLayout>

    <!--称布局开始-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="250dp"
			android:background="@mipmap/home_pan_bg">
			<ImageView
				android:id="@+id/home_panel"
				android:layout_width="270dp"
				android:layout_height="270dp"
				android:src="@mipmap/home_panel"
				android:layout_centerHorizontal="true"
				android:layout_marginBottom="-60dp"
				android:layout_marginTop="20dp"/>

			<ImageView
				android:id="@+id/needle"
				android:layout_width="270dp"
				android:layout_height="270dp"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="-60dp"
				android:src="@mipmap/home_needle" />

			<TextView
				android:id="@+id/home_look_tv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:layout_marginTop="180dp"
				android:textSize="20sp"
				android:background="@drawable/home_rounded_tv"
				android:layout_centerHorizontal="true" />

			<RadioGroup
				android:id="@+id/home_rg"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_centerHorizontal="true"
				android:orientation="horizontal"
				android:checkedButton="@+id/home_gbtn_g">

			<RadioButton
				android:id="@+id/home_gbtn_g"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:button ="@drawable/home_unit_radiocheck"
				android:text="@string/home_groupbutton_g"
				/>
			<RadioButton
				android:id="@+id/home_gbtn_oz"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:button ="@drawable/home_unit_radiocheck"
				android:text="@string/home_groupbutton_oz" />
			<RadioButton
				android:id="@+id/home_gbtn_ml"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:button ="@drawable/home_unit_radiocheck"
				android:text="@string/home_groupbutton_ml" />
			<RadioButton
				android:id="@+id/home_gbtn_tael"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:button ="@drawable/home_unit_radiocheck"
				android:text="@string/home_groupbutton_tael" />
			<RadioButton
				android:id="@+id/home_gbtn_lb"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:button ="@drawable/home_unit_radiocheck"
				android:text="@string/home_groupbutton_pound"/>
			</RadioGroup>
		</RelativeLayout>
	</LinearLayout>
    <!--称布局结束-->


	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:textSize="13sp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@mipmap/home_health"
            android:text="健康分析"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:textSize="13sp"
			android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:drawableLeft="@mipmap/home_next"
			android:text="下一个"
			/>
	</RelativeLayout>


	<!--显示-->
	<TextView
		android:id="@+id/home_change_tv"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
   <!--<LinearLayout
		android:id="@+id/home_nofood_ly"
		android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:drawableLeft="@mipmap/home_nofood"
			android:textStyle="bold"
			android:textSize="20sp"
			android:padding="5dp"
			android:text="@string/home_nofood_tv"
			/>

    </LinearLayout>-->
<!--
	<LinearLayout
		android:id="@+id/home_food_ly"
		android:layout_weight="1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#C0C000"
		android:orientation="vertical"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="当前称量的热量是"
			/>
	</LinearLayout>
-->

	<!--头部切换食材-->
	<LinearLayout
		android:id="@+id/home_edt_ly"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=" "/>

		<EditText
			android:id="@+id/home_search_edt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/home_search_name"
			android:background="@drawable/home_rounded_edt"
			android:textSize="18sp"
			android:layout_gravity="center"
			android:gravity="center"
			/>

		<TextView
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=" "/>

		<ImageView
			android:id="@+id/home_title_set"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@mipmap/home_title_set"
			android:padding="5dp"
			/>
	</LinearLayout>




	<!--模仿蓝牙数据-->

	<EditText android:id="@+id/inputText"
		android:hint="Input the text here!"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="numberDecimal">
	</EditText>

	<Button android:text="Speak"
		android:id="@+id/speakBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		></Button>

</LinearLayout>
